# science-projects-service

./: .coveragerc  .dockerignore  .env.example  .env.local  .env.temaplate  .env.template  .gitignore  .pre-commit-bandit-wrapper.sh  .pre-commit-config.yaml  .pre-commit-flake8-wrapper.sh  Dockerfile  ProjectsWithNoRFs.txt  README.md  RemovedBusinessAreas.txt  activeProjectsWithoutBAs.txt  conftest.py  coverage.json  entrypoint.sh  package-lock.json  publish-ghcr.yaml  pyproject.toml  pytest.ini  render.yaml  run_tests.sh  setup-dev.sh  table_to_html.py  template.tex  test_api_id_field.py  test_serializers_id_standardization.py  test_url_fix.py  wait-for-postgres.sh
.github/workflows/: README.md  build.yml  image-build-scan.yml  main.yml  release.yml  run-tests.yml  test.yml
adminoptions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
adminoptions/migrations/: 0001_initial.py  0002_initial.py  0003_adminoptions_guide_about_adminoptions_guide_admin_and_more.py  0004_admintask.py  0005_alter_admintask_options_admintask_end_date_and_more.py  0006_remove_admintask_reasoning.py  0007_rename_requestor_admintask_requester.py  0008_alter_admintask_reason.py  0009_alter_admintask_status.py  0010_remove_caretaker_start_date_alter_caretaker_end_date.py  0011_guidesection_adminoptions_guide_content_contentfield.py  0012_remove_old_id_fields.py
adminoptions/tests/: __init__.py  conftest.py  test_models.py  test_views.py  test_views_part2.py  test_views_part3.py
agencies/: README.md  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
agencies/migrations/: 0001_initial.py  0002_initial.py  0003_alter_businessarea_old_id_alter_businessarea_slug.py  0003_alter_businessarea_unique_together.py  (+5 more)
caretakers/: README.md  __init__.py  admin.py  apps.py  models.py  serializers.py  test_admintask_integration.py  test_legacy_logging.py  test_migration.py  test_serializers.py  test_views.py  urls.py  urls_compat.py  views.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
common/: README.md  __init__.py  utils.py
communications/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
config/: authentication.py  celery.py  color_formatter.py  consumers.py  dbca_middleware.py  helpers.py  routing.py  settings.py  tasks.py  throttling.py  urls.py
contacts/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
documents/: README.md  _Annual_Report_10.html  _Annual_Report_11.html  _Annual_Report_12.html  _Annual_Report_14.html  _Annual_Report_9.html  admin.py  concept_4.html  concept_plan_18.html  concept_plan_4.html  concept_plan_985.html  models.py  newer_concept_plan_18.html  prince_ar_document_styles.css  prince_project_document_styles.css  progressreport_4.html  projectclosure_4.html  projectplan_1.html  projectplan_3.html  projectplan_4.html  rte_styles.css  serializers.py  urls.py  views.py
dumped_media/: file_cleaner.py
locations/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
medias/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
projects/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
quotes/: README.md  admin.py  models.py  serializers.py  unique_quotes.txt  urls.py  views.py
spms_migrator/: .env.template  .gitignore  ChoiceLauncher.py  ChoiceViewer.py  Extractor.py  FileHandler.py  Loader.py  README.md  RemovedBusinessAreas.txt  Start.py  Transformer.py  misc.py  pyproject.toml
spms_migrator/csv_files/: django_cache_table.csv  django_comments.csv  documents_conceptplan.csv  documents_projectplan.csv  documents_studentreport.csv  guardian_groupobjectpermission.csv  guardian_userobjectpermission.csv  projects_collaborationproject.csv  projects_project_web_resources.csv  projects_projectmembership.csv  projects_researchfunction.csv  projects_scienceproject.csv  pythia_address.csv  pythia_ararreport.csv  pythia_division.csv  pythia_program.csv  pythia_service.csv  pythia_user.csv  pythia_webresourcedomain.csv  pythia_workcenter.csv  south_migrationhistory.csv
spms_migrator/data/clean_data/: auth_group.csv  django_cache_table.csv  django_comments.csv  django_content_type.csv  documents_document.csv  documents_projectclosure.csv  documents_stafftimeestimate.csv  documents_studentreport.csv  projects_collaborationproject.csv  projects_project.csv  projects_projectmembership.csv  projects_researchfunction.csv  projects_studentproject.csv  pythia_address.csv  pythia_ararreport_divisions.csv  pythia_district.csv  pythia_division.csv  pythia_program.csv  pythia_service.csv  pythia_urlprefix.csv  pythia_user.csv  pythia_user_groups.csv  pythia_webresource.csv  pythia_webresourcedomain.csv  pythia_workcenter.csv  reversion_revision.csv  south_migrationhistory.csv
spms_migrator/data/raw_data/: auth_group_permissions.csv  auth_permission.csv  django_cache_table.csv  django_comment_flags.csv  django_select2_keymap.csv  documents_conceptplan.csv  documents_document.csv  documents_projectclosure.csv  documents_projectplan.csv  documents_studentreport.csv  geography_columns.csv  geometry_columns.csv  projects_collaborationproject.csv  projects_corefunctionproject.csv  projects_project.csv  projects_project_areas.csv  projects_projectmembership.csv  projects_researchfunction.csv  projects_studentproject.csv  pythia_address.csv  pythia_ararreport.csv  pythia_district.csv  pythia_division.csv  pythia_program.csv  pythia_region.csv  pythia_user_groups.csv  pythia_workcenter.csv  south_migrationhistory.csv
staff_profile_migrator/: README.md  staff_migrator.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
users/: README.md  admin.py  models.py  serializers.py  test_serializers_id_field.py  urls.py  views.py
(+787 files in other folders)
