[tool.poetry]
name = "service-spms"
version = "0.1.0"
description = ""
authors = ["idabblewith <109533655+idabblewith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.12.11"
beautifulsoup4 = "^4.12.2"
brotli = "^1.1.0"
django-cors-headers = "^4.3.0"
django-environ = "^0.12.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
whitenoise = { extras = ["brotli"], version = "^6.6.0" }
gunicorn = ">=22.0.0"
pandas = "^2.1.1"
pillow = "^11.1.0"
sqlparse = ">=0.5.0"
chardet = "^5.2.0"
cssutils = "^2.9.0"
tqdm = "^4.66.2"
sentry-sdk = "^2.1.1"
psycopg = "^3.2.2"
psycopg-binary = "^3.2.2"
psycopg-pool = "^3.2.3"
bleach = "^6.2.0"
tinycss2 = "^1.4.0"
html2text = "^2025.4.15"
dj-database-url = "^3.0.0"
dbca-utils = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
